fixed redirect loop

--- a/views/weather.mustache
+++ b/views/weather.mustache
@@ -1,7 +1,7 @@
 <html>
     <body>
         <form action="/weather/location">
-            Enter location: <input type="text" placeholder="name">
+            Enter location: <input type="text" name="name" placeholder="name">
             <input type="submit">
         </form>
     </body>
